2008-03-30  Sven Neumann  <sven@gimp.org>

	* gimpheal.c (gimp_heal_motion): applied the same cleanups as in
	the gimp-2-4 branch (see bug #521433).

2008-03-30  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpcanvas.c
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcolorframe.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpcurveview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdockable.c
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdockseparator.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimpsamplepointeditor.c
	* app/widgets/gimptoolbox.c: chain up unconditionally in
	GtkWidget::style_set() because there is has a default
	implementation.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpmenudock.c (gimp_menu_dock_auto_clicked): when
	the "Auto" button gets enabled, always copy both display and image
	to the local context (because there can be displays without image
	now).

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui-vtable.c (gui_display_create): remove temporary
	"object" variable, it's prefectly fine to say GIMP_DISPLAY() on a
	NULL pointer.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* configure.in: add -Wold-style-definition to CFLAGS.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprocview.c (gimp_proc_view_new): code cleanup.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* libgimpmath/gimpmd5.[ch]: removed implementation of the MD5
	algorithm and delegate to GChecksum instead.
	
	* libgimpmath/Makefile.am
	* libgimpmath/test-md5.c: removed test of the MD5 implementation.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_calculate_checksum): fixed use of
	GChecksum.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* libgimpmath/gimpmd5.c: undef GIMP_DISABLE_DEPRECATED.

2008-03-29  Michael Natterer  <mitch@gimp.org>
