@@ -1286,7 +1286,7 @@ gimp_display_shell_empty (GimpDisplayShell *shell)
   gimp_display_shell_scale_setup (shell);
   gimp_display_shell_scaled (shell);
 
-  gdk_window_set_cursor (shell->canvas->window, NULL);
+  gimp_display_shell_unset_cursor (shell);
 
   gimp_statusbar_empty (GIMP_STATUSBAR (shell->statusbar));
 
